Fix distortion caused to latest release & upcoming exhibition sections of home page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,7 +151,7 @@ a {
   
 .image-grid img {
     width: 100%;
-    height: 150px;
+    height: 100%;
     border-radius: 8px;
     transition: transform 0.3s ease-in-out;
 }
